--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,31 +5,18 @@
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
-            <div class="col"></div>
+            <div class="col">
+
+            </div>
         </div>
     </div>
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xl-3 col-lg-3 d-xl-block d-lg-block d-md-none d-sm-none d-none">
-                <ul>
-                    <li> test</li>
-                    <li> test</li>
-                    <li> test</li>
-                    <li> test</li>
-                    <li> test</li>
-                </ul>
-            </div>
-            <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12 px-0">
-                <div class="row">
-                    <h1 class="display-4 logo-font text-black"> Text 1</h1>
-                </div>
-                <div class="row">
-                    <h1 class="display-4 logo-font text-white bg-dark"> Text 2</h1>
-                    <button> Show All</button>
-                </div>
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-12">
+                <h1 class="logo-font text-black text-center my-5 bg-font"> creating unique, authentic, and on-brand visual content</h1>
             </div>
         </div>
     </div>
