--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
     {% block corecss %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&family=Quattrocento:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
@@ -35,40 +35,67 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-        <div class="row">
-            <div class="col-12 col-lg-4 my-auto py-1 py-l-0 text-center text-lg-left">
-                <a href="{% url 'home' %}" class="nav-link main-logo-link"> Kalopsia Lens </a>
+        <div id="top-nav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+                <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                  <h2 class="logo-font text-black my-0"> Kalopsia Productions </h2></a>
             </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-l-0">
-                <form class="d-flex">  <!-- search form taken from bootstrap --> 
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                <form method="GET" action="" class="d-flex">  <!-- search form taken from bootstrap --> 
+                    <input class="form-control me-2" type="text" name="q" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-black" type="submit">Search</button>
                 </form>
             </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-l-0">
-              <button type="button" class="btn btn-warning btn-menu"><i class="fas fa-user-alt"></i>
-                {% if request.user.is_authenticated %}
-                    {% if request.user.is_superuser %}
-                        <a href=""></a> <!-- Page with product management option-->
-                    {% endif %}
-                    <a href=""></a> <!-- Page with User Profile and the option to log out -->
-                {% else %}
-                    <a href=""></a> <!-- Page with option to sign up or log in-->
-                {% endif %}
-              </button>
-              <button type="button" class="btn btn-warning btn-menu"><i class="fas fa-shopping-bag"></i>
-                <p class="my-0">
-                    {% if grand_total %}
-                        ${{ grand_total|floatformat:2 }}
+            
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+
+              <ul class="list-inline-item list-unstyled text-center text-lg-right my-0">
+                <li class="list-inline-item">
+                    {% if request.user.is_authenticated %} 
+                        <a class="text-black nav-item nav-link" href="{% url 'profile'}">
+                          <i class="fas fa-user fa-lg"></i>
+                          <p>Account</p>
+                        </a>
                     {% else %}
-                        $0.00
+                      <a class="text-black nav-item nav-link" href="{% url 'account_signup' %}">
+                        <i class="fas fa-user fa-lg"></i>
+                        <p>Account</p>
+                      </a>
                     {% endif %}
-                </p>
-              </button>
-              <button type="button" class="btn btn-warning btn-menu"><i class="fas fa-heart"></i>
-              </button>
-
-
+                </li>
+                <li class="list-inline-item">
+                    <a class="text-black nav-item nav-link">
+                      <div class="text-center">
+                          <div>
+                            <i class="fas fa-heart fa-lg"></i>
+                            <p>Favorites</p>
+                          </div>
+                      </div>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="text-black nav-item nav-link" href="#">
+                      <div class="text-center">
+                          <div>
+                            <i class="fas fa-shopping-bag fa-lg"></i>
+                            <p>Bag</p>
+                          </div>
+                      </div>
+                    </a>
+                </li>
+                {% if request.user.is_authenticated %}
+                <li class="list-inline-item">
+                  <a class="text-black nav-link nav-item" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <div class="text-center">
+                        <div>
+                          <i class="fas fa-sign-out-alt fa-lg"></i>
+                          <p>Logout</p>
+                        </div>
+                    </div>
+                  </a>
+                </li>
+                {% endif %}
+              </ul>
             </div>
         </div>
     </header>
