--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,8 @@
     {% endblock %}
 
     {% block corecss %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&family=Quattrocento:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
@@ -35,13 +36,13 @@
 
   </head>
   <body>
-    <header class="container-fluid fixed-top">
-        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+    <header class="container-fluid fixed-top bg-white">
+        <div id="topnav" class="row pt-lg-1 d-none d-lg-flex">
+            <div class="col-12 col-md-3 col-lg-3 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
                   <h2 class="logo-font text-black my-0"> Kalopsia Productions </h2></a>
             </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+            <div class="col-12 col-md-4 col-lg-4 my-auto py-1 py-lg-0">
                 <form method="GET" action="">  <!-- search form taken from bootstrap --> 
                   <div class="input-group w-100">
                       <input class="form-control" type="text" name="q" placeholder="Search" aria-label="Search">
@@ -52,7 +53,7 @@
                 </form>
             </div>
             
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+            <div class="col-12 col-md-5 col-lg-5 my-auto py-1 py-lg-0">
 
               <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                 <li class="list-inline-item">
@@ -92,7 +93,7 @@
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
         </div>
-        <div class="row bg-white w-100">
+        <div class="row bg-white">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
