--- a/templates/includes/mobile_top_header.html
+++ b/templates/includes/mobile_top_header.html
@@ -3,12 +3,12 @@
       <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
               <div><i class="fas fa-search fa-lg"></i></div>
-              <p class="my-0">Search</p>
+              <p class="my-0"></p>
           </div>
       </a>
-      <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
+      <div class="dropdown-menu border-0 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
           <form class="form" method="GET" action="">
-              <div class="input-group w-100">
+              <div class="input-group">
                   <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                   <div class="input-group-append">
                       <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
@@ -25,7 +25,7 @@
       <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
               <div><i class="fas fa-user fa-lg"></i></div>
-              <p class="my-0">Account</p>
+              <p class="my-0"></p>
           </div>
       </a>
       <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -45,9 +45,9 @@
       <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="">
           <div class="text-center">
               <div><i class="fas fa-shopping-bag fa-lg"></i>
-                <p class="my-0">Bag</p>
             </div>
           </div>
       </a>
     </li>
+
 </ul>
