--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -24,13 +24,13 @@
                         {% for product in products %}
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
                                     {% if product.image %}
-                                    <a href="">
-                                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                                    </a>
+                                        <a href="{% url 'product_detail' product.id %}">
+                                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                        </a>
                                     {% else %}
-                                    <a href="">
-                                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                                    </a>
+                                        <a href="{% url 'product_detail' product.id %}">
+                                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                        </a>
                                     {% endif %}
                                     <div class="card-body bg-white pb-0">
                                         <p class="mb-0 text-uppercase font-weight-bold">{{ product.name }}</p>
