--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,6 @@ body {
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Quattrocento', serif;
-    padding-top: 80px;
 }
 
 .bg-font {
@@ -85,5 +84,15 @@ html {
 
     .header-container {
         padding-top: 164px;
+    }
+}
+
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
     }
 }
