--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,8 +15,8 @@
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-12">
-                <h1 class="logo-font text-black text-center my-5 bg-font"> creating unique, authentic, and on-brand visual content</h1>
+            <div class="film-div filmstrip filmstrip col-12">
+                <h1 class="special-h text-center"> creating unique, authentic, and on-brand visual content</h1>
             </div>
         </div>
     </div>
