--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -15,11 +15,11 @@
 {% block content %}
    
 <div class="overlay"></div>
-<div class="container">
+<div class="container bg-white">
 
     <div class="row">
         <div class="col">
-            <h2 class="text-center bg-dark p-1 font-weight-bold text-white"> Shopping Bag</h2>
+            <h2 class="text-center bg-white p-2 font-weight-bold text-black"> Shopping Bag</h2>
         </div>
     </div>
     <div class="row">
