--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,10 +14,13 @@
 
 {% block content %}
     <div class="container h-100">
-        <div class="row h-100">
+        <div class="row">
             <div class="film-div filmstrip filmstrip col-12">
                 <h1 class="special-h text-center"> creating unique, authentic, and on-brand visual content</h1>
             </div>
+        </div>
+        <div class="row">
+            <img src="/media/moon.jpg" class="img-fluid" alt="Moon Image">
         </div>
     </div>
 
