--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -14,14 +14,11 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center">
-                <h2 class="bg-white p-1"> Services</h2>
-                
-                <hr class="w-50 mb-1">
             </div>
         </div>
-        <div class="row">
+        <div class="row bg-white">
                 <div class="col-10 product-container offset-1">
-                    <div class="row">
+                    <div class="row pt-2">
                             <div class="col-12 col-md-6">
                                     {% if product.image %}
                                     <a href="{{ product.image.url }}" target="_blank">
@@ -69,24 +66,13 @@
                                             </div>
 
                                             {% if product.variation_set.all %}
-                                            {% if product.variation_set.types %}
-                                                <select class="form-control" name="type">
-                                                {% for item in product.variation_set.types %}
+                                                <select class="form-control" name="variation">
+                                                {% for item in product.variation_set.all %}
                                                     <option value="{{ item.name|lower }}">{{ item.name|capfirst }}
                                                     </option>
                                                 {% endfor %}
                                                 </select>
                                             {% endif %}
-                                            {% if product.variation_set.durations %}
-                                                <select class="form-control" name="duration">
-                                            {% for item in product.variation_set.durations %}
-                                                <option value="{{ item.name|lower }}">{{ item.name|capfirst }}
-                                                </option>
-                                            {% endfor %}
-                                                </select>
-                                            {% endif %}
-                                            {% endif %}
-                
                                             <div class="col-12">
                                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                                     <span class="icon">
@@ -103,9 +89,9 @@
                             </div>
                     </div>
                     <!-- back to top button -->
-                    <div class="btt-button shadow-sm rounded-0 border border-black">
+                    <div class="btt-button bg-dark shadow-sm rounded-0 mt-2 border border-black">
                         <a class="btt-link d-flex h-100">
-                            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+                            <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
                         </a>
                     </div>
                 </div>
