--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -56,11 +56,11 @@
                             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
                                     {% if product.image %}
                                         <a href="{% url 'product_detail' product.id %}">
-                                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                            <img class="card-img-top1 img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                                         </a>
                                     {% else %}
                                         <a href="{% url 'product_detail' product.id %}">
-                                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                            <img class="card-img-top1 img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                         </a>
                                     {% endif %}
                                     <div class="card-body bg-white pb-0">
@@ -94,9 +94,9 @@
                         {% endfor %}
                     </div>
                     <!-- back to top button -->
-                    <div class="btt-button shadow-sm rounded-0 border border-black">
+                    <div class="btt-button shadow-sm bg-dark mt-2 rounded-0 border border-black">
                         <a class="btt-link d-flex h-100">
-                            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+                            <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
                         </a>
                     </div>
                 </div>
