--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,10 +20,11 @@ html {
     height: 100%;
 }
 
+
 /* Frame from https://codepen.io/Snugug/pen/bzRwyw */
 
 .filmstrip {
-    --background: rgba(0, 0, 0, .35);
+    --background: rgba(0, 0, 0, 0.637);
     --size: 10px;
     background-image:
       linear-gradient(to right, var(--background) var(--size), transparent var(--size)),
@@ -39,7 +40,6 @@ html {
   }
   
   .film-div {
-    height: 20vh;
     width: 100%;
     color: white;
     margin-bottom: 1rem;
@@ -103,7 +103,7 @@ html {
   }
 }
 
-/* fixed top navbar only on medium and up */
+/* only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
         position: fixed;
@@ -115,6 +115,12 @@ html {
 
     .header-container {
         padding-top: 164px;
+    }
+
+    .card-img-top1 {
+        width: 100%;
+        height: 22vw;
+        object-fit: cover;
     }
 }
 
