--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -29,12 +29,13 @@
                 <table class="table table table-sm bg-white">
                     <thead>
                       <tr>
-                        <th scope="col"></th>
+                        <th scope="col">Image</th>
                         <th scope="col">Product Info</th>
-                        <th scope="col"></th>
                         <th scope="col">Price</th>
                         <th scope="col">Quantity</th>
+                        <th scope="col">Variation</th>
                         <th scope="col">Total</th>
+                        <th></th>
                       </tr>
                     </thead>
                     <tbody>
@@ -42,13 +43,9 @@
                       <tr>
                         <th><img class="img-fluid rounded" src="{{ item.product.image.url }}"></th>
                         <td><p class="my-0"><strong>{{ item.product.name }}</strong></p></td>
-                        {% if product.variation.all %}
-                        {% for variation in product.variation.all %}
-                        <td>{{ variation.name|capfirst }}</td>
-                        {% endfor %}
-                        {% endif %}
                         <td> <p class="my-0">${{ item.product.price }}</p></td>
                         <td> <p class="my-0">{{ item.quantity }}</p></td>
+                        <td> <p class="my-0">{{ item.variation }}</p></td>
                         <td> <p class="my-0">${{ grand_total|floatformat:2 }}</p></td>
                       </tr>
                     {% endfor %}
