--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -46,7 +46,7 @@
                         <td> <p class="my-0">${{ item.product.price }}</p></td>
                         <td> <p class="my-0">{{ item.quantity }}</p></td>
                         <td> <p class="my-0">{{ item.variation }}</p></td>
-                        <td> <p class="my-0">${{ grand_total|floatformat:2 }}</p></td>
+                        <td> <p class="my-0">${{ item.product.price }}</p></td>
                       </tr>
                     {% endfor %}
 
