added functionality to update and remove items in the bag as well and included a filter to show the subtotal

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,6 +20,12 @@ html {
     height: 100%;
 }
 
+.btt-link,
+.update-link,
+.remove-item {
+    cursor: pointer;
+}
+
 
 /* Frame from https://codepen.io/Snugug/pen/bzRwyw */
 
