--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
+{% load bag_tools %}
+
 
 
 {% block page_header %}
@@ -29,25 +31,60 @@
                 <table class="table table table-sm bg-white">
                     <thead>
                       <tr>
+                        <th></th>
                         <th scope="col">Image</th>
                         <th scope="col">Product Info</th>
-                        <th scope="col">Price</th>
                         <th scope="col">Quantity</th>
-                        <th scope="col">Variation</th>
                         <th scope="col">Total</th>
-                        <th></th>
                       </tr>
                     </thead>
-                    <tbody>
+                    <div>
                     {% for item in bag_items %}
-                      <tr>
-                        <th><img class="img-fluid rounded" src="{{ item.product.image.url }}"></th>
-                        <td><p class="my-0"><strong>{{ item.product.name }}</strong></p></td>
-                        <td> <p class="my-0">${{ item.product.price }}</p></td>
-                        <td> <p class="my-0">{{ item.quantity }}</p></td>
-                        <td> <p class="my-0">{{ item.variation }}</p></td>
-                        <td> <p class="my-0">${{ item.product.price }}</p></td>
-                      </tr>
+                    <tr>
+                        <th></th>
+                        <td class="p-3 w-25"><img class="img-fluid rounded" src="{{ item.product.image.url }}"></td>
+                        <td class="p-3 w-30">
+                            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                            <p class="my-0">${{ item.product.price }}</p>
+                            <p class="my-0">{{ item.variation }}</p>
+                        </td>
+                        <td class="p-3 w-25">
+                            <form class="form update-form" action="{% url 'update_bag' item.item_id %}" method="POST">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn-sm btn btn-black rounded-0" 
+                                                data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                <span>
+                                                    <i class="fas fa-minus fa-sm"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control qty_input" type="number"
+                                            name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                            data-item_id="{{ item.item_id }}"
+                                            id="id_qty_{{ item.item_id }}">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                <span>
+                                                    <i class="fas fa-plus fa-sm"></i>
+                                                </span>
+                                            </button>
+                                            {% if item.variation_set.all %}
+                                            <input type="hidden" name="variation" value="{{ item.variation }}">
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </form> 
+                            <a class="update-link text-info"><small>Update</small></a>
+                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-variation="{{ item.variation }}"><small>Remove</small></a>
+                        </td> 
+                        <td> <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p></td>
+                    </tr> 
+                
                     {% endfor %}
 
                         <tr>
@@ -66,7 +103,6 @@
                                 </a>
                             </td>
                         </tr>
-                    </tbody>
                 </table>
             </div>
             {% else %}
@@ -81,4 +117,33 @@
     </div>
 
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
+
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e) {
+        var form = $(this).prev('.update-form');
+        console.log(form);
+        form.submit();
+    })
+
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var variation = $(this).data('variation');
+        var url = `/bag/remove/${itemId}/`;
+        var data = {'csrfmiddlewaretoken': csrfToken, 'variation': variation};
+
+        $.post(url, data)
+         .done(function() {
+             location.reload();
+         });
+    })
+
+</script>
 {% endblock %}
