--- a/static/css/base.css
+++ b/static/css/base.css
@@ -100,6 +100,15 @@ html {
     border: 1px solid black !important;
 }
 
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999;
+}
+
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
