--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -15,7 +15,6 @@
 {% endblock %}
 
 {% block content %}
-   {{ bag_items }}
 <div class="overlay"></div>
 <div class="container bg-white">
 
@@ -100,7 +99,7 @@
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
-                            <a href="" class="btn btn-black rounded-0 btn-lg">
+                            <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
                                 <span class="text-uppercase">Secure Checkout</span>
                                 <span class="icon">
                                     <i class="fas fa-lock"></i>
