--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,14 +13,127 @@
 {% endblock %}
 
 {% block content %}
+
+<!-- Gallery -->
     <div class="container h-100">
+        <div class="row">
+            <div class="film-div filmstrip filmstrip col-12">
+                <h1 class="special-h text-center"> capturing the special moments and people in your life</h1>
+            </div>
+        </div>
+        <div class="row">
+            
+            <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+
+            <img
+                src="/media/_DSF1407-2.jpg"
+                class="w-100 shadow-1-strong rounded mb-4"
+                alt="Portrait Man"
+            />
+        
+            <img
+                src="/media/DSCF5444.jpg"
+                class="w-100 shadow-1-strong rounded mb-4"
+                alt="Portrait Woman"
+            />
+
+
+            <img
+                src="/media/wedding-1255520_1280.jpg"
+                class="w-100 shadow-1-strong rounded mb-4"
+                alt="Portrait Man"
+            />
+
+
+            </div>
+        
+            <div class="col-lg-4 mb-4 mb-lg-0">
+            <img
+                src="/media/pexels-avonne-stalling-3916019.jpg"
+                class="w-100 shadow-1-strong rounded mb-4"
+                alt="Portrait"
+            />
+        
+            <img
+                src="/media/DSCF3416.jpg"
+                class="w-100 shadow-1-strong rounded mb-4"
+                alt="Portrait"
+            />
+            <img
+            src="/media/pexels-agung-pandit-wiguna-1320701.jpg"
+            class="w-100 shadow-1-strong rounded mb-4"
+            alt="Portrait"
+            />
+            </div>
+        
+            <div class="col-lg-4 mb-4 mb-lg-0">
+            <img
+                src="/media/maternity-4569911_1920.jpg"
+                class="w-100 shadow-1-strong rounded mb-4"
+                alt="Portrait"
+            />
+        
+            <img
+                src="/media/DSCF5613.jpg"
+                class="w-100 shadow-1-strong rounded mb-4"
+                alt="Portrait"
+            />
+            <img
+                src="/media/DSCF5396-3.jpg"
+                class="w-100 shadow-1-strong rounded mb-4"
+                alt="Portrait"
+            />
+        
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6 col-md-12 mb-4 mb-lg-0">
+                <img
+                src="/media/moon.jpg"
+                class="w-100 shadow-1-strong rounded mb-4"
+                alt="Photo Moon"
+                />
+            </div>
+
+            <div class="col-lg-6 col-md-12 mb-4 mb-lg-0">
+                <img
+                src="/media/DSCF1870.jpg"
+                class="w-100 shadow-1-strong rounded mb-4"
+                alt="Photo Dogs"
+                />
+            </div>
+        </div>
+
+
+  <!-- Carousel -->
+
         <div class="row">
             <div class="film-div filmstrip filmstrip col-12">
                 <h1 class="special-h text-center"> creating unique, authentic, and on-brand visual content</h1>
             </div>
         </div>
-        <div class="row">
-            <img src="/media/moon.jpg" class="img-fluid" alt="Moon Image">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="/media/2.png" alt="1st Slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="/media/office-932926_1920.jpg" alt="2nd slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="/media/company-5064997_1920.jpg" alt="3rd slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 
