--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -2,7 +2,9 @@
 {% load static %}
 {% load bag_tools %}
 
-
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'checkout/css/check_out.css' %}">
+{% endblock %}
 
 {% block page_header %}
     <div class="container header-container">
@@ -15,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-   {{ bag_items }}
+
 <div class="overlay"></div>
     <div class="container bg-white">
         <div class="row">
@@ -133,4 +135,12 @@
             </div>
         </div>
     </div>
+
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
